cmake_minimum_required(VERSION 3.7...3.19)

if(${CMAKE_VERSION} VERSION_LESS 3.12)
    cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
endif()

project(ShaderCompile CXX)

option(USE_DXC "Use DirectXShaderCompiler instead of D3DCompiler" ON)

option(RE2_BUILD_TESTING "" OFF)

add_subdirectory(shared/re2)
add_subdirectory(shared/gsl)
if(USE_DXC)
    find_package(Git QUIET)
    if(GIT_FOUND)
        execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive
                        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/shared/dxc
                        RESULT_VARIABLE GIT_SUBMOD_RESULT)
        if(NOT GIT_SUBMOD_RESULT EQUAL "0")
            message(FATAL_ERROR "git submodule update --init failed with ${GIT_SUBMOD_RESULT}, please checkout submodules")
        endif()
    endif()
    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
    set(LLVM_APPEND_VC_REV ON)
    set(LLVM_DEFAULT_TARGET_TRIPLE "dxil-ms-dx")
    set(LLVM_ENABLE_EH ON)
    set(LLVM_ENABLE_RTTI ON)
    set(LLVM_INCLUDE_DOCS OFF)
    set(LLVM_INCLUDE_EXAMPLES OFF)
    set(LLVM_INCLUDE_TESTS OFF)
    set(LLVM_OPTIMIZED_TABLEGEN OFF)
    set(LLVM_REQUIRES_EH ON)
    set(LLVM_REQUIRES_RTTI ON)
    set(LLVM_TARGETS_TO_BUILD "None")
    set(LIBCLANG_BUILD_STATIC ON)
    set(CLANG_BUILD_EXAMPLES OFF)
    set(CLANG_CL OFF)
    set(CLANG_ENABLE_ARCMT OFF)
    set(CLANG_ENABLE_STATIC_ANALYZER OFF)
    set(CLANG_INCLUDE_TESTS OFF)
    set(HLSL_INCLUDE_TESTS OFF)
    set(ENABLE_SPIRV_CODEGEN ON)
    set(SPIRV_BUILD_TESTS OFF)
    option(CMAKE_EXPORT_COMPILE_COMMANDS "" ON)
    option(LLVM_APPEND_VC_REV "" ON)
    option(LLVM_DEFAULT_TARGET_TRIPLE "" "dxil-ms-dx")
    option(LLVM_ENABLE_EH "" ON)
    option(LLVM_ENABLE_RTTI "" ON)
    option(LLVM_INCLUDE_DOCS "" OFF)
    option(LLVM_INCLUDE_EXAMPLES "" OFF)
    option(LLVM_INCLUDE_TESTS "" OFF)
    option(LLVM_OPTIMIZED_TABLEGEN "" OFF)
    option(LLVM_REQUIRES_EH "" ON)
    option(LLVM_REQUIRES_RTTI "" ON)
    option(LLVM_TARGETS_TO_BUILD "" "None")
    option(LIBCLANG_BUILD_STATIC "" ON)
    option(CLANG_BUILD_EXAMPLES "" OFF)
    option(CLANG_CL "" OFF)
    option(CLANG_ENABLE_ARCMT "" OFF)
    option(CLANG_ENABLE_STATIC_ANALYZER "" OFF)
    option(CLANG_INCLUDE_TESTS "" OFF)
    option(HLSL_INCLUDE_TESTS "" OFF)
    option(ENABLE_SPIRV_CODEGEN ON)
    option(SPIRV_BUILD_TESTS "" OFF)
    option(HLSL_BUILD_DXILCONV "" OFF)
    option(HLSL_SUPPORT_QUERY_GIT_COMMIT_INFO "" OFF)
    option(HLSL_EMBED_VERSION "" ON)
    option(LLVM_INCLUDE_TOOLS "" ON)
    option(LLVM_BUILD_TOOLS "" OFF)
    option(LLVM_INCLUDE_UTILS "" OFF)
    option(LLVM_INCLUDE_EXAMPLES "" OFF)
    option(LLVM_INCLUDE_TESTS "" OFF)
    option(LLVM_INCLUDE_DOCS "" OFF)
    option(BUILD_TESTING "" OFF)

    add_subdirectory(shared/dxc)
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(SRC
    ShaderCompile/cfgprocessor.cpp
    ShaderCompile/d3dxfxc.cpp
    ShaderCompile/ShaderCompile.cpp
    ShaderCompile/shaderparser.cpp
    ShaderCompile/utlbuffer.cpp
    )

add_executable(ShaderCompile ${SRC})
target_link_libraries(ShaderCompile PRIVATE re2::re2 Microsoft.GSL::GSL)
if (USE_DXC)
    target_link_libraries(ShaderCompile dxcompiler)
    target_compile_definitions(ShaderCompile PRIVATE USE_DXC)
    include_directories(shared/dxc/include)
endif()
include_directories(ShaderCompile/include shared/re2)

if (CMAKE_GENERATOR MATCHES "Visual Studio")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
set_property(TARGET ShaderCompile PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set_property(TARGET re2 PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
target_compile_definitions(ShaderCompile PRIVATE _ITERATOR_DEBUG_LEVEL=0)
target_compile_definitions(re2 PRIVATE _ITERATOR_DEBUG_LEVEL=0)
